[package]
name = "armv8a_panic_semihosting"
version = "0.0.0"
edition = "2021"
authors = ["Enzo Albornoz <enzocoelhoalbornoz@gmail.com>"]
license = "MIT"
keywords = ["armv8", "arm", "semihosting"]
categories = ["no-std", "embedded"]
repository = "https://github.com/EnzoAlbornoz/armv8a-panic-semihosting"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["info"]
info = []

[dependencies]
armv8a_semihosting = { path = "../armv8a-semihosting" }
